# xrnd

./: .gitignore  LICENSE  README.md
grayscott/cpp/: CMakeLists.txt
grayscott/cpp/src/: main.cpp
grayscott/python/: grayscott.py
